--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Pending changes in the mainline
 
 No official release yet. Still work in progress.
 
+* Support of Visual Studio 2008
 
 
 2015/03/13
