support of FreeBSD

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Pending changes in the mainline
 No official release yet. Still work in progress.
 
 * Support of Visual Studio 2008
+* Support of FreeBSD
 
 
 2015/03/13
