--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ No official release yet. Still work in progress.
 
 * Support of Visual Studio 2008
 * Support of FreeBSD
+* Support of OS X
 
 
 2015/03/13
