--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Pending changes in the mainline
 No official release yet. Still work in progress.
 
 * All the APIs are now under the same root
+* Inject version information into Windows binaries
 * Use of Orthanc built-in API for multipart answers (requires Orthanc >= 0.9.1)
 * Support of WADO-RS - RetrieveMetadata
 * Support of Visual Studio 2008
