--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Pending changes in the mainline
 
 No official release yet. Still work in progress.
 
+* Support of WADO, in addition to DICOMweb
 * All the APIs are now under the same root
 * Inject version information into Windows binaries
 * Use of Orthanc built-in API for multipart answers (requires Orthanc >= 0.9.1)
