--- a/NEWS
+++ b/NEWS
@@ -1,13 +1,19 @@
 Pending changes in the mainline
 ===============================
 
-No official release yet. Still work in progress.
 
+Version 0.1 (2015/08/03)
+========================
+
+* Support of WADO-RS - RetrieveMetadata
 * Support of WADO, in addition to DICOMweb
 * All the APIs are now under the same root
+
+Production
+----------
+
 * Inject version information into Windows binaries
 * Use of Orthanc built-in API for multipart answers (requires Orthanc >= 0.9.1)
-* Support of WADO-RS - RetrieveMetadata
 * Support of Visual Studio 2008
 * Support of FreeBSD
 * Support of OS X
