--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,11 @@ Pending changes in the mainline
 ===============================
 
 
+=> Minimum SDK version: 0.9.4 <=
+
+
+
+
 Version 0.1 (2015/08/03)
 ========================
 
