--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Pending changes in the mainline
 
 => Minimum SDK version: 0.9.4 <=
 
+* Upgrade to GDCM 2.6.0 for static and Windows builds
 
 
 
@@ -24,7 +25,7 @@ Production
 * Support of Visual Studio 2008
 * Support of FreeBSD
 * Support of OS X
-* Update to Boost 1.58.0 for static and Windows builds
+* Upgrade to Boost 1.58.0 for static and Windows builds
 
 
 2015/03/13
