--- a/NEWS
+++ b/NEWS
@@ -4,9 +4,9 @@ Pending changes in the mainline
 
 => Minimum SDK version: 0.9.5 <=
 
+* Support of WADO-RS - RetrieveFrames
 * QIDO-RS now takes advantage of "/tools/find"
 * Upgrade to GDCM 2.6.0 for static and Windows builds
-
 
 
 Version 0.1 (2015/08/03)
