--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ Pending changes in the mainline
 ===============================
 
 
+Version 0.2 (2015/12/10)
+========================
+
 => Minimum SDK version: 0.9.5 <=
 
 * Support of WADO-RS - RetrieveFrames
