--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Pending changes in the mainline
 
 
 * Fix issue #13 (QIDO-RS study-level query is slow)
+* Fix issue #14 (Aggregate fields empty for QIDO-RS study/series-level queries)
 
 
 Version 0.2 (2015/12/10)
