--- a/NEWS
+++ b/NEWS
@@ -4,9 +4,7 @@ Pending changes in the mainline
 => Minimum SDK version: 1.0.1 <=
 
 * STOW-RS client
-* Better robustness in the STOW-RS server
-
-
+* Improved robustness in the STOW-RS server
 * Fix issue #13 (QIDO-RS study-level query is slow)
 * Fix issue #14 (Aggregate fields empty for QIDO-RS study/series-level queries)
 
