Improved robustness in the STOW-RS server

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Improved robustness in the STOW-RS server (occurrences of "\r\n\r\n" in DICOM are supported)
 * Performance warning if runtime debug assertions are turned on
 
 
