--- a/NEWS
+++ b/NEWS
@@ -5,7 +5,9 @@ Pending changes in the mainline
 * Performance warning if runtime debug assertions are turned on
 * WADO-RS client supports quoted Content-Type header in HTTP answers
 * Added "Arguments" to WADO-RS and STOW-RS client to handle query arguments in uri
+* Using MIME types of DICOM version 2017c in WADO RetrieveFrames
 * Fix issue #53 (DICOMWeb plugin support for "limit" and "offset" parameters in QIDO-RS)
+* Fix issue #28 (Non-compliant enumerations for "accept" header for WADO RetrieveFrames)
 
 
 Version 0.3 (2016/06/28)
