--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Support for OpenBSD
+
 
 Version 0.4 (2017-07-19)
 ========================
