--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Support for OpenBSD
-
+* added ?expand argument to /servers route
 
 Version 0.4 (2017-07-19)
 ========================
