--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ Pending changes in the mainline
 * Added "?expand" argument to "/servers" route
 * Fix generation of numeric tags part of sequences for ".../metadata" routes
 * Support for OpenBSD
+* Support for Linux Standard Base
+* Upgrade to GDCM 2.8.4 for static builds
 
 
 Version 0.4 (2017-07-19)
