--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 Pending changes in the mainline
 ===============================
 
-* New option: "QidoCaseSensitive" to make queries to QIDO-RS server case insentitive
+* New option: "QidoCaseSensitive" to make queries to QIDO-RS server case insensitive
 * Defaults to JSON answers instead of XML
 * Use of "application/dicom+json" MIME type instead of "application/json"
 * Added "?expand" argument to "/servers" route
