--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ Pending changes in the mainline
 * Support for OpenBSD
 * Support for Linux Standard Base
 * Upgrade to GDCM 2.8.4 for static builds
+* Resort to Orthanc framework
 
 
 Version 0.4 (2017-07-19)
