--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 Pending changes in the mainline
 ===============================
 
+
+Version 0.5 (2018-08-19)
+========================
+
 * New option: "QidoCaseSensitive" to make queries to QIDO-RS server case insensitive
 * Defaults to JSON answers instead of XML
 * Use of "application/dicom+json" MIME type instead of "application/json"
