--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Sending "HttpHeaders" of the "DicomWeb.Servers" configuration to remote DICOMweb servers
+
 
 Version 0.5 (2018-04-19)
 ========================
