--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+=> Minimum SDK version: 1.5.4 <=
+
 * Sending "HttpHeaders" of the "DicomWeb.Servers" configuration to remote DICOMweb servers
 * Improved WADO-RS compatibility if Orthanc is acting as a DICOMweb client
 * More detailed information about errors is provided in the HTTP answers
