--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Pending changes in the mainline
 * Sending "HttpHeaders" of the "DicomWeb.Servers" configuration to remote DICOMweb servers
 * Improved WADO-RS compatibility if Orthanc is acting as a DICOMweb client
 * More detailed information about errors is provided in the HTTP answers
+* Fix issue #112/4 (QIDO-RS: wrong serialization of number values)
 * Upgrade to GDCM 2.8.8 for static builds
 
 
