--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Handling of the HTTP header "Forwarded" for WADO-RS
+
 
 Version 0.6 (2019-02-27)
 ========================
