--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+=> Minimum SDK version: 1.5.7 <=
+
 * Handling of the HTTP header "Forwarded" for WADO-RS
 
 
