--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Pending changes in the mainline
 * Support "Transfer-Encoding: chunked" to reduce memory consumption in STOW-RS
   (provided the SDK version is above 1.5.7)
 * Handling of the HTTP header "Forwarded" for WADO-RS
+* New URI: /dicom-web/servers/.../qido
 
 
 Version 0.6 (2019-02-27)
