Fix handling of the "Forwarded" HTTP header

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Support of "window", "viewport" and "quality" parameters in "Retrieve Rendered Transaction"
+* Fix handling of the "Forwarded" HTTP header
 * Added explicit "Accept" header to avoid uncompressing DICOM files by Google cloud
   https://groups.google.com/d/msg/orthanc-users/w1Ekrsc6-U8/T2a_DoQ5CwAJ
 
