--- a/NEWS
+++ b/NEWS
@@ -21,7 +21,9 @@ Maintenance
 * Fix handling of the "Forwarded" HTTP header
 * Fix support for client certificate authentication
 * Accept multiple MIME types in Accept header for WADO-RS "Retrieve Metadata"
-* Added explicit "Accept" header to avoid uncompressing DICOM files by Google cloud
+* Added explicit "Accept" header to avoid uncompressing DICOM files by Google cloud,
+  can be turned off by setting "HasWadoRsUniversalTransferSyntax" to "false" (for
+  instance if contacting a remote Orthanc plugin with DICOMweb version <= 1.0)
   https://groups.google.com/d/msg/orthanc-users/w1Ekrsc6-U8/T2a_DoQ5CwAJ
 * Fix issue #162 ("DICOMweb metadata resource reads all instances")
 * Fix issue #164 ("JPEG YBR_422 generates a 500 in the DicomWeb plugin")
