--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 Pending changes in the mainline
 ===============================
 
+
+Version 1.1 (2020-03-04)
+========================
+
 New features
 ------------
 
