--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,11 @@ Pending changes in the mainline
 ===============================
 
 
+=> Minimum SDK version: 1.7.0 <=
+
+
+* Removed dependency on GDCM
+
 Maintenance
 -----------
 
