--- a/NEWS
+++ b/NEWS
@@ -2,14 +2,13 @@ Pending changes in the mainline
 ===============================
 
 
+
+Version 1.2 (2020-05-26)
+========================
+
 => Minimum SDK version: 1.7.0 <=
 
-
 * Removed dependency on GDCM
-
-Maintenance
------------
-
 * "QidoCaseSensitive" defaults to "CaseSensitivePN" of Orthanc configuration (instead of "true")
 
 
