--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Support transcoding in WADO-RS RetrieveStudy, RetrieveSeries and RetrieveInstance
-* Support of dynamic linking against the Orthanc framework library
+* Support of dynamic linking against the system-wide Orthanc framework library
 * Fix ".../rendered" on MONOCHROME1 images
 
 
