--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 Pending changes in the mainline
 ===============================
 
+* "Extrapolate" mode doesn't fail if no consensus is found in WADO-RS Retrieve Metadata.
+  This is necessary for proper behavior of the Stone Web viewer on very small series.
+
 
 Version 1.3 (2020-10-19)
 ========================
