--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Pending changes in the mainline
 
 * "Extrapolate" mode doesn't fail if no consensus is found in WADO-RS Retrieve Metadata.
   This is necessary for proper behavior of the Stone Web viewer on very small series.
+* Fix issue #190 (STOW-RS fails is multipart boundary is surrounded by quotes in headers)
 
 
 Version 1.3 (2020-10-19)
