--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 Pending changes in the mainline
 ===============================
 
+
+Version 1.6 (2021-05-07)
+========================
+
 * New field "Timeout" in "DicomWeb.Servers" to specify HTTP timeout on a per-server basis
 * Reduced memory consumption in STOW-RS server thanks to an optimization of
   Orthanc::MultipartStreamReader in Orthanc framework 1.9.3
