--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Detection of windowing and rescale in ".../rendered" for Philips multiframe images
+
 
 Version 1.6 (2021-05-07)
 ========================
