--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 Pending changes in the mainline
 ===============================
 
+
+Version 1.7 (2021-08-31)
+========================
+
 * Detection of windowing and rescale in ".../rendered" for Philips multiframe images
 
 
