Show an error message when trying to send studies > 4GB via STOW-RS

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Detection of windowing and rescale in ".../rendered" for Philips multiframe images
+* Show an error message when trying to send studies > 4GB via STOW-RS
 
 
 Version 1.6 (2021-05-07)
