--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,37 @@
 Pending changes in the mainline
 ===============================
 
+=> Minimum Orthanc version: 1.11.0 <=
+
 * Show an error message when trying to send studies > 4GB via STOW-RS
+* Optimized QIDO-RS to build its responses from DB if tags are saved in "ExtraMainDicomTags".
+  Recommended configuration to optmize dicom-web usage:
+    "ExtraMainDicomTags" : {
+      "Instance" : [
+        "Rows",
+        "Columns",
+        "ImageType",
+        "SOPClassUID",
+        "ContentDate",
+        "ContentTime",
+        "FrameOfReferenceUID",
+        "PixelSpacing",
+        "SpecificCharacterSet",
+        "BitsAllocated",
+        "BitsStored"
+      ],
+      "Series" : [
+        "TimezoneOffsetFromUTC",
+        "PerformedProcedureStepStartDate",
+        "PerformedProcedureStepStartTime"
+      ],
+      "Study": [
+        "TimezoneOffsetFromUTC"
+      ],
+      "Patient": []
+    }
+
+
 
 Version 1.7 (2021-08-31)
 ========================
