--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Pending changes in the mainline
-===============================
+Version 1.8 (2022-05-09)
+========================
 
 => Minimum Orthanc version: 1.11.0 <=
 
