--- a/TODO
+++ b/TODO
@@ -5,6 +5,8 @@
   from https://groups.google.com/g/orthanc-users/c/-ZKW9967DW4/m/9T3bwHeCAAAJ
   command to test:
   curl -H "Accept: application/json" http://localhost:8044/dicom-web/studies/1.2.840.113619.2.404.3.2831156996.875.1599094730.441/series/1.2.840.113619.2.404.3.2831156996.875.1599094730.453.5/metadata
+  -> return MainDicomSequences
+
 
 * handle same SeriesInstanceUID in different studies:
   from https://groups.google.com/g/orthanc-users/c/nSBcMP_ri4o/m/sQxqKa72BAAJ
@@ -14,6 +16,3 @@
   curl http://localhost:8044/dicom-web/instances?StudyInstanceUID=1.2.3.4 shall return not only the instance tags but also the study level tags.
   See section 10.6.3.3.3 "Instance Resources" in https://dicom.nema.org/medical/dicom/current/output/html/part18.html:
   "If the Target Resource is All Instances, then include all Study level Attributes specified in Section 10.6.3.3.1."
-
-
-* idea to investigate: implement /metadata route by providing only the MainDicomTags - ExtraMainDicomTags and sequences stored in DB.  Not all tags !
