--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 Pending changes in the mainline
 ===============================
 
+* if using "MainDicomTags" mode for "SeriesMetadata" and "StudiesMetadata",
+  the plugin now returns the "ExtraMainDicomTags" that have been configured on Orthanc side.
+* Now able to return sequences stored in "ExtraMainDicomTags" (with Orthanc 1.11.1)
+
 Version 1.8 (2022-05-09)
 ========================
 
