--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Pending changes in the mainline
-===============================
+Version 1.9 (2022-06-30)
+========================
 
 => Minimum SDK version: 1.9.2 <=
 => Minimum Orthanc version: 1.11.1 <=
