--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Pending changes in the mainline
+===============================
+
+* speed-up the /metadata routes by a factor of 2 when in "MainDicomTags" or "Extrapolate"
+  mode.
+
+
+
 Version 1.9 (2022-06-30)
 ========================
 
