--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ Pending changes in the mainline
 
 * speed-up the /metadata routes by a factor of 2 when in "MainDicomTags" or "Extrapolate"
   mode.
-
+* improved HTTP status code for Stow-RS (now returning 202)
 
 
 Version 1.9 (2022-06-30)
