--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Pending changes in the mainline
-===============================
+Version 1.10 (2022-08-30)
+=========================
 
 * speed-up the /metadata routes by a factor of 2 when in "MainDicomTags" or "Extrapolate"
   mode.
