--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
-Version 1.10.1 (2022-10-10)
+Version 1.11 (2022-10-13)
 ===========================
 
-* Added a list of "Resources" in the DicomWebStowClient "Content"
+* Added a list of "Resources" in the DicomWebStowClient Job "Content"
 
 
 Version 1.10 (2022-08-30)
