--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 1.13 (2023-02-03)
+=========================
+
+* Use Orthanc SDK 1.11.3 to avoid a crash in Stow-RS jobs.
+
 Version 1.12 (2022-10-27)
 =========================
 
