--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,14 @@
+Pending changes in the mainline
+===============================
+
+* Support "X-Forwarded-Host" and "X-Forwarded-Proto" headers to compute BulkDataURI.
+
+
 Version 1.13 (2023-02-03)
 =========================
 
 * Use Orthanc SDK 1.11.3 to avoid a crash in Stow-RS jobs.
+
 
 Version 1.12 (2022-10-27)
 =========================
