--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Support "X-Forwarded-Host" and "X-Forwarded-Proto" headers to compute BulkDataURI.
+* speed-up the studies/../series/../metadata routes by a factor of 3 when in "MainDicomTags" mode.
 
 
 Version 1.13 (2023-02-03)
