new Experimental mode for SeriesMetadata

--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,10 @@ Pending changes in the mainline
 ===============================
 
 * Support "X-Forwarded-Host" and "X-Forwarded-Proto" headers to compute BulkDataURI.
-* speed-up the studies/../series/../metadata routes by a factor of 3 when in "MainDicomTags" mode.
+* small speed-up the studies/../series/../metadata route when in "MainDicomTags" mode.
+* new "Experimental" mode for "SeriesMetadata" that is fetching tags from the DB or
+  from the storage if they are missing (useful if you recently changed the "ExtraMainDicomTags"
+  configuration)
 
 
 Version 1.13 (2023-02-03)
